@@ -5,17 +5,22 @@ import org.sample.pricing.dataModel.CompetitorRate;
 import org.sample.pricing.dataModel.Hotel;
 import org.sample.pricing.dataModel.MarketDemands;
 import org.sample.pricing.persist.HotelService;
+import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.stereotype.Service;
 
-import java.util.*;
 import java.time.LocalDate;
-import java.util.function.Consumer;
+import java.util.Collections;
+import java.util.List;
 
 @Service
-@RequiredArgsConstructor
 public class SubscriberDataService {
 
     private final HotelService hotelService;
+
+    @Autowired
+    public SubscriberDataService(HotelService hotelService){
+        this.hotelService = hotelService;
+    }
     public List<CompetitorRate> getCompetitorRates(String hotelName, LocalDate checkIn, LocalDate checkOut) {
         Hotel hotel = hotelService.getHotel(hotelName);
         return hotel.competitors().stream().
@@ -31,17 +36,19 @@ public class SubscriberDataService {
 
     private List<CompetitorRate> getCompetitor(LocalDate checkIn, LocalDate checkOut, String competitor){
         return switch (competitor){
-            case "Hyatt" -> List.of(new CompetitorRate(LocalDate.parse(""), 10D, 1));
-            case "Mariott" -> List.of(new CompetitorRate(LocalDate.parse(""), 10D, 1));
-            case "Conrad" -> List.of(new CompetitorRate(LocalDate.parse(""), 10D, -1));
+            case "Hyatt" -> List.of(new CompetitorRate(LocalDate.parse("2023-01-01"), 10D, 1));
+            case "Mariott" -> List.of(new CompetitorRate(LocalDate.parse("2023-01-01"), 10D, 1));
+            case "Conrad" -> List.of(new CompetitorRate(LocalDate.parse("2023-01-01"), 10D, -1));
+            default -> Collections.emptyList();
         };
     }
 
     private List<MarketDemands> getMarketDemand(String hotelName){
         return switch (hotelName){
-            case "Hyatt" -> List.of(new MarketDemands("Hyatt", LocalDate.parse(""), 10));
-            case "Mariott" -> List.of(new MarketDemands("Mariott", LocalDate.parse(""), 10));
-            case "Conrad" -> List.of(new MarketDemands("Conrad", LocalDate.parse(""), 10));
+            case "Hyatt" -> List.of(new MarketDemands("Hyatt", LocalDate.parse("2023-01-01"), 10));
+            case "Mariott" -> List.of(new MarketDemands("Mariott", LocalDate.parse("2023-01-01"), 10));
+            case "Conrad" -> List.of(new MarketDemands("Conrad", LocalDate.parse("2023-01-01"), 10));
+            default -> Collections.emptyList();
         };
     }
 
